<?xml version="1.0"?>
<package>
  <name>cosmotechs_driver</name>
  <version>0.0.1</version>
  <description>The cosmotechs_driver package</description>

  <maintainer email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
